Allows sponsor boxes to grow in width to avoid wrapping.

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -8,7 +8,7 @@
 
 .container {
   margin: 0 auto;
-  max-width: 940px;
+  max-width: 1100px;
   padding: 2em 0;
   width: 90%;
 }
